--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "sass": "^1.89.2",
+    "shortid": "^2.2.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
